<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.inventory.liker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_import"
        android:name="com.inventory.liker.ui.gallery.ImportFragment"
        android:label="@string/menu_import"
        tools:layout="@layout/fragment_import" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.inventory.liker.ui.slideshow.ExportFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_managebrand"
        android:name="com.inventory.liker.ManageBrand"
        android:label="@string/menu_managebrand"
        tools:layout="@layout/activity_manage_brand" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.inventory.liker.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>